fixed some bugs on mobile for menu and characters

--- a/css/dropdown-menu.css
+++ b/css/dropdown-menu.css
@@ -46,3 +46,11 @@
 .dropdown-menu li a:hover {
   color: white;
 }
+
+@media (max-width: 780px) {
+  [data-dropdown] .dropdown-menu {
+    display: block;
+    animation: show-up 0.3s forwards;
+    position: static;
+  }
+}
